commit lần 2, hoàn thành autocomplext, curent places. set map typle

--- a/app/src/main/res/layout/content_map.xml
+++ b/app/src/main/res/layout/content_map.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MapsActivity"
-    tools:showIn="@layout/activity_maps">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <fragment
         android:id="@+id/map"
@@ -14,23 +12,60 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.skyfishjy.library.RippleBackground
-        android:id="@+id/ripple_bg"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:rb_color="#0099CC"
-        app:rb_duration="3000"
-        app:rb_radius="32dp"
-        app:rb_rippleAmount="4"
-        app:rb_scale="6">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <ImageView
+        <RelativeLayout
+            android:id="@+id/btnSetMapType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_placeholder"
-            android:translationY="-18dp" />
-    </com.skyfishjy.library.RippleBackground>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="@dimen/_80sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:background="@drawable/background_button_set_map">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:contentDescription="@string/todo1"
+                android:src="@drawable/ic_button_chang_map_type" />
+        </RelativeLayout>
+
+        <include
+            android:id="@+id/btnMapType"
+            layout="@layout/maps_type"
+            android:layout_width="@dimen/_200sdp"
+            android:layout_height="@dimen/_110sdp"
+            android:layout_below="@+id/btnSetMapType"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:visibility="gone" />
+    </RelativeLayout>
+
+    <!--    <com.skyfishjy.library.RippleBackground-->
+    <!--        android:id="@+id/ripple_bg"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        app:rb_color="#0099CC"-->
+    <!--        app:rb_duration="3000"-->
+    <!--        app:rb_radius="32dp"-->
+    <!--        app:rb_rippleAmount="4"-->
+    <!--        app:rb_scale="6">-->
+
+    <!--        <ImageView-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_centerInParent="true"-->
+    <!--            android:src="@drawable/ic_placeholder"-->
+    <!--            android:translationY="-18dp"-->
+    <!--            android:contentDescription="@string/todo2" />-->
+    <!--    </com.skyfishjy.library.RippleBackground>-->
 
     <com.mancj.materialsearchbar.MaterialSearchBar
         android:id="@+id/searchBar"
@@ -48,9 +83,10 @@
 
     <Button
         android:id="@+id/btn_find"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/_150sdp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
         android:layout_margin="16dp"
         android:background="@color/colorPrimary"
         android:text="@string/button_find_location"
